force-app/main/default/objects/AuditLog__c/AuditLog__c.object-meta.xml
<CustomObject>
    <label>Audit Log</label>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>Audit Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>