force-app/main/default/objects/AuditLog__c/fields/PerformedBy__c.field-meta.xml
<CustomField>
    <fullName>PerformedBy__c</fullName>
    <label>Performed By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>