force-app/main/default/objects/AuditLog__c/fields/RelatedId__c.field-meta.xml
<CustomField>
    <fullName>RelatedId__c</fullName>
    <label>Related ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>